--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -1,6 +1,8 @@
-<head>
-    <title>Background to the project</title>
-</head>
+<h1>
+    <title><color=purple>Background to the project</color></title>
+</h1>
+<h2>
+    <title>The 7 Auras of the World</title>
 <body>
 
 </body>
