--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -1,8 +1,10 @@
+<head>The 7 Auras of the World</head>
+
 <h1>
-    <title><color=purple>Background to the project</color></title>
+    <title><color=purple>The 7 Auras of the World</color></title>
 </h1>
 <h2>
-    <title>The 7 Auras of the World</title>
+    <title>Background to the project</title>
 <body>
 
 </body>
