--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -1,10 +1,14 @@
-<head>The 7 Auras of the World</head>
+<head>
+    <link rel="stylesheet" href="style.css">
+    The 7 Auras of the World
+</head>
 
+<body>
 <h1>
-    <title><color=purple>The 7 Auras of the World</color></title>
+    <title>The 7 Auras of the World</title>
 </h1>
 <h2>
     <title>Background to the project</title>
-<body>
+</h2>
 
 </body>
