--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -1,14 +1,43 @@
 <head>
     <link rel="stylesheet" href="style.css">
-    The 7 Auras of the World
+    <title>The 7 Auras of the World</title> 
 </head>
 
 <body>
-<h1>
-    <title>The 7 Auras of the World</title>
-</h1>
-<h2>
-    <title>Background to the project</title>
-</h2>
+
+<h1>The 7 Auras of the World</h1>
+
+<h2>Background to the project</h2>
+
+<ul>
+    <li>
+        <a href="ChristTheRedeemer.html">ChristTheRedeemer</a>
+    </li>
+
+    <li>
+        <a href="TajMahai.html">TajMahai</a>
+    </li>
+
+    <li>
+        <a href="TheColosseum.html">TheColosseum</a>
+    </li>
+
+    <li>
+        <a href="MachuPicchu.html">MachuPicchu</a>
+    </li>
+
+    <li>
+        <a href="GreatPyramidOfGiza.html">GreatPyramidOfGiza</a>
+    </li>
+
+    <li>
+        <a href="GreatWallOfChina.html">GreatWallOfChina</a>
+    </li>
+
+    <li>
+        <a href="ChichenItza.html">ChichenItza</a>
+    </li>
+</ul>
+
 
 </body>
