--- a/ChichenItza.html
+++ b/ChichenItza.html
@@ -1,6 +1,4 @@
 <head>
-    <title>ChichenItza</title>
+    <link rel="stylesheet" href="style.css">
+    <title>ChichenItza</title> 
 </head>
-<body>
-
-</body>
