--- a/ChichenItza.html
+++ b/ChichenItza.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>ChichenItza</title> 
 </head>
+<body>
+    <img src = "https://th.bing.com/th/id/R.0f8cbd222b4f2e2d0e98a7ed1d9a63f8?rik=2sorvmOLsZnGUQ&pid=ImgRaw&r=0" alt="Image of ChichenItza" width="500" height="600">
+</body>
