--- a/ChristTheRedeemer.html
+++ b/ChristTheRedeemer.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>ChristTheRedeemer</title> 
 </head>
+<body>
+    <img src = "https://i.pinimg.com/originals/82/06/de/8206de725ce41a8a7f4d7e041df73337.jpg" alt="Image of ChristTheRedeemer" width="500" height="600">
+</body>
