--- a/GreatPyramidOfGiza.html
+++ b/GreatPyramidOfGiza.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>GreatPyramidOfGiza</title> 
 </head>
+<body>
+    <img src = "https://tse1.mm.bing.net/th/id/OIP.HI2Ie9jPEDlH0l20e57aRwHaFH?rs=1&pid=ImgDetMain" alt="Image of the GreatPyramidOfGiza" width="500" height="600">
+</body>
