--- a/GreatWallOfChina.html
+++ b/GreatWallOfChina.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>GreatWallOfChina</title> 
 </head>
+<body>
+    <img src = "https://tse3.mm.bing.net/th/id/OIP.luBZDkgnN6ORmEAsscntTQHaE0?rs=1&pid=ImgDetMain" alt="Image of the GreatWallOfChina" width="500" height="600">
+</body>
