--- a/MachuPicchu.html
+++ b/MachuPicchu.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>MachuPicchu</title> 
 </head>
+<body>
+    <img src = "https://tse2.mm.bing.net/th/id/OIP.3DMmkE_GQozRPE-qJLQ2pwHaE7?rs=1&pid=ImgDetMain" alt="Image of MachuPicchu" width="500" height="600">
+</body>
