--- a/Petra.html
+++ b/Petra.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>Petra</title> 
 </head>
+<body>
+    <img src = "https://tse1.mm.bing.net/th/id/OIP.wRetgRaVDqrCdzqZRmTIlwHaFj?rs=1&pid=ImgDetMain" alt="Image of Petra" width="500" height="600">
+</body>
