--- a/TajMahai.html
+++ b/TajMahai.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>TajMahai</title> 
 </head>
+<body>
+    <img src = "https://th.bing.com/th/id/R.06136c32aea32a345938f576f4fb1cbe?rik=FupIJ5PSntuTJw&riu=http%3a%2f%2ftraveldigg.com%2fwp-content%2fuploads%2f2016%2f05%2fTaj-Mahal-Pictures.jpeg&ehk=TP8ijXAaja4Iysq29C2FlYkqqdprHFGnA5hbVUzevTg%3d&risl=&pid=ImgRaw&r=0" alt="Image of TajMahai" width="500" height="600">
+</body>
