--- a/TheColosseum.html
+++ b/TheColosseum.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="style.css">
     <title>TheColosseum</title> 
 </head>
+<body>
+    <img src = "https://th.bing.com/th/id/R.22620bc7580ff093ce87facf219b34de?rik=zQyGlBQVlLnjmg&riu=http%3a%2f%2fwww.mostamazingwonders.com%2fwp-content%2fuploads%2f2014%2f06%2fRoman-Colosseum1.jpg&ehk=8g%2fH05DdjMq62Ryu2fzs1TT9C3fP4BkK5cRb%2b%2fE1k%2bo%3d&risl=&pid=ImgRaw&r=0" alt="Image of TheColosseum" width="500" height="600">
+</body>
