--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -37,6 +37,10 @@
     <li>
         <a href="ChichenItza.html">ChichenItza</a>
     </li>
+
+    <li>
+        <a href="Petra.html">Petra</a>
+    </li>
 </ul>
 
 
