--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -3,45 +3,23 @@
     <title>The 7 Auras of the World</title> 
 </head>
 
-<body>
+<body id="main">
 
 <h1>The 7 Auras of the World</h1>
 
 <h2>Background to the project</h2>
 
-<ul>
-    <li>
-        <a href="ChristTheRedeemer.html">ChristTheRedeemer</a>
-    </li>
-
-    <li>
-        <a href="TajMahai.html">TajMahai</a>
-    </li>
-
-    <li>
-        <a href="TheColosseum.html">TheColosseum</a>
-    </li>
-
-    <li>
-        <a href="MachuPicchu.html">MachuPicchu</a>
-    </li>
-
-    <li>
-        <a href="GreatPyramidOfGiza.html">GreatPyramidOfGiza</a>
-    </li>
-
-    <li>
-        <a href="GreatWallOfChina.html">GreatWallOfChina</a>
-    </li>
-
-    <li>
-        <a href="ChichenItza.html">ChichenItza</a>
-    </li>
-
-    <li>
-        <a href="Petra.html">Petra</a>
-    </li>
-</ul>
+<div id = "mySidenav" class="sidenav">
+<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+<a href="ChristTheRedeemer.html">ChristTheRedeemer</a>
+<a href="TajMahai.html">TajMahai</a>
+<a href="TheColosseum.html">TheColosseum</a>
+<a href="MachuPicchu.html">MachuPicchu</a>
+<a href="GreatPyramidOfGiza.html">GreatPyramidOfGiza</a>
+<a href="GreatWallOfChina.html">GreatWallOfChina</a>
+<a href="ChichenItza.html">ChichenItza</a>
+<a href="Petra.html">Petra</a>    
+</div>
 
 
 </body>
