--- a/Petra.html
+++ b/Petra.html
@@ -1,7 +1,25 @@
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>Petra</title> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> <!-- CSS file reference -->
+    <title>The 7 Auras of the World</title>
 </head>
 <body>
-    <img src = "https://tse1.mm.bing.net/th/id/OIP.wRetgRaVDqrCdzqZRmTIlwHaFj?rs=1&pid=ImgDetMain" alt="Image of Petra" width="500" height="600">
+    <div class="side-nav">
+        <ul class="menu-hover-fill">
+            <li><a href="ChristTheRedeemer.html" data-text="ChristTheRedeemer">Christ The Redeemer</a></li>
+            <li><a href="TajMahai.html" data-text="TajMahai">Taj Mahal</a></li>
+            <li><a href="TheColosseum.html" data-text="TheColosseum">The Colosseum</a></li>
+            <li><a href="MachuPicchu.html" data-text="MachuPicchu">Machu Picchu</a></li>
+            <li><a href="GreatPyramidOfGiza.html" data-text="GreatPyramidOfGiza">Great Pyramid of Giza</a></li>
+            <li><a href="GreatWallOfChina.html" data-text="GreatWallOfChina">Great Wall of China</a></li>
+            <li><a href="ChichenItza.html" data-text="ChichenItza">Chichen Itza</a></li>
+            <li><a href="Petra.html" data-text="Petra">Petra</a></li>
+        </ul>
+    </div>
+    <div class="main-content">
+        <h1>Petra</h1>
+        <p>Information about Chichen Itza...</p>
+        <img src = "https://tse1.mm.bing.net/th/id/OIP.wRetgRaVDqrCdzqZRmTIlwHaFj?rs=1&pid=ImgDetMain" alt="Image of Petra" width="500" height="600">
+    </div>
 </body>
