--- a/TajMahai.html
+++ b/TajMahai.html
@@ -1,7 +1,25 @@
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>TajMahai</title> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> <!-- CSS file reference -->
+    <title>The 7 Auras of the World</title>
 </head>
 <body>
-    <img src = "https://th.bing.com/th/id/R.06136c32aea32a345938f576f4fb1cbe?rik=FupIJ5PSntuTJw&riu=http%3a%2f%2ftraveldigg.com%2fwp-content%2fuploads%2f2016%2f05%2fTaj-Mahal-Pictures.jpeg&ehk=TP8ijXAaja4Iysq29C2FlYkqqdprHFGnA5hbVUzevTg%3d&risl=&pid=ImgRaw&r=0" alt="Image of TajMahai" width="500" height="600">
+    <div class="side-nav">
+        <ul class="menu-hover-fill">
+            <li><a href="ChristTheRedeemer.html" data-text="ChristTheRedeemer">Christ The Redeemer</a></li>
+            <li><a href="TajMahai.html" data-text="TajMahai">Taj Mahal</a></li>
+            <li><a href="TheColosseum.html" data-text="TheColosseum">The Colosseum</a></li>
+            <li><a href="MachuPicchu.html" data-text="MachuPicchu">Machu Picchu</a></li>
+            <li><a href="GreatPyramidOfGiza.html" data-text="GreatPyramidOfGiza">Great Pyramid of Giza</a></li>
+            <li><a href="GreatWallOfChina.html" data-text="GreatWallOfChina">Great Wall of China</a></li>
+            <li><a href="ChichenItza.html" data-text="ChichenItza">Chichen Itza</a></li>
+            <li><a href="Petra.html" data-text="Petra">Petra</a></li>
+        </ul>
+    </div>
+    <div class="main-content">
+        <h1>TajMahai</h1>
+        <p>Information about Chichen Itza...</p>
+        <img src = "https://th.bing.com/th/id/R.06136c32aea32a345938f576f4fb1cbe?rik=FupIJ5PSntuTJw&riu=http%3a%2f%2ftraveldigg.com%2fwp-content%2fuploads%2f2016%2f05%2fTaj-Mahal-Pictures.jpeg&ehk=TP8ijXAaja4Iysq29C2FlYkqqdprHFGnA5hbVUzevTg%3d&risl=&pid=ImgRaw&r=0" alt="Image of TajMahai" width="500" height="600">
+    </div>
 </body>
