--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -1,25 +1,30 @@
+<!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>The 7 Auras of the World</title> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> <!-- CSS file reference -->
+    <title>The 7 Auras of the World</title>
 </head>
 
 <body id="main">
+    <div class="side-nav">
+        <ul class="menu-hover-fill">
+            <li><a href="ChristTheRedeemer.html" data-text="ChristTheRedeemer">Christ The Redeemer</a></li>
+            <li><a href="TajMahai.html" data-text="TajMahai">Taj Mahal</a></li>
+            <li><a href="TheColosseum.html" data-text="TheColosseum">The Colosseum</a></li>
+            <li><a href="MachuPicchu.html" data-text="MachuPicchu">Machu Picchu</a></li>
+            <li><a href="GreatPyramidOfGiza.html" data-text="GreatPyramidOfGiza">Great Pyramid of Giza</a></li>
+            <li><a href="GreatWallOfChina.html" data-text="GreatWallOfChina">Great Wall of China</a></li>
+            <li><a href="ChichenItza.html" data-text="ChichenItza">Chichen Itza</a></li>
+            <li><a href="Petra.html" data-text="Petra">Petra</a></li>
+        </ul>
+    </div>
 
-<h1>The 7 Auras of the World</h1>
-
-<h2>Background to the project</h2>
-
-<div id = "mySidenav" class="sidenav">
-<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-<a href="ChristTheRedeemer.html">ChristTheRedeemer</a>
-<a href="TajMahai.html">TajMahai</a>
-<a href="TheColosseum.html">TheColosseum</a>
-<a href="MachuPicchu.html">MachuPicchu</a>
-<a href="GreatPyramidOfGiza.html">GreatPyramidOfGiza</a>
-<a href="GreatWallOfChina.html">GreatWallOfChina</a>
-<a href="ChichenItza.html">ChichenItza</a>
-<a href="Petra.html">Petra</a>    
-</div>
-
-
+    <div class="main-content">
+        <h1>The 7 Auras of the World</h1>
+        <h2>Background to the project</h2>
+        <p>Your main content goes here. This content will be to the right of the sidebar navigation and will scroll independently.</p>
+    </div>
 </body>
+</html>
+
