--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -9,6 +9,7 @@
 <body id="main">
     <div class="side-nav">
         <ul class="menu-hover-fill">
+            <li><a href="BackgroundToTheProject.html" data-text="BackgroundToTheProject">BackgroundToTheProject</a></li>
             <li><a href="ChristTheRedeemer.html" data-text="ChristTheRedeemer">Christ The Redeemer</a></li>
             <li><a href="TajMahai.html" data-text="TajMahai">Taj Mahal</a></li>
             <li><a href="TheColosseum.html" data-text="TheColosseum">The Colosseum</a></li>
