--- a/BackgroundToTheProject.html
+++ b/BackgroundToTheProject.html
@@ -24,7 +24,7 @@
     <div class="main-content">
         <h1>The 7 Auras of the World</h1>
         <h2>Background to the project</h2>
-        <p>Your main content goes here. This content will be to the right of the sidebar navigation and will scroll independently.</p>
+        <p>In this website we are ranking the 7 wonders of the World by their aura!</p>
     </div>
 </body>
 </html>
