--- a/ChichenItza.html
+++ b/ChichenItza.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>ChichenItza</h1>
-        <p>Information about ChristTheRedeemer..</p>
+        <h2>Ranking Number 7 on the List: Chichen Itza</h2>
+        <p>Chichen Itza is the Mayan flex of science, astronomy, and just straight-up mind-blowing vibes. El Castillo, the main pyramid, is like a calendar, clock, and spooky spectacle in one (hello, snake shadow during equinoxes). It’s a monument to ancient ingenuity with a side of mystical energy. You feel the genius and spiritual power just standing near it.</p>
         <img src="https://th.bing.com/th/id/R.0f8cbd222b4f2e2d0e98a7ed1d9a63f8?rik=2sorvmOLsZnGUQ&pid=ImgRaw&r=0" alt="Image of ChichenItza" width="500" height="600">
     </div>    
 </body>
