--- a/ChristTheRedeemer.html
+++ b/ChristTheRedeemer.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>ChristTheRedeemer</h1>
-        <p>Information about ChristTheRedeemer..</p>
+        <h2>Ranking Number 1 on the List: Christ the Redeemer</h2>
+        <p>Standing tall in Rio de Janeiro, Christ the Redeemer is the OG "protector vibes" monument. This statue isn't just flexing a 360-degree view of Brazil—it's got a whole backstory of unity and faith that hits hard. Built to bring people together post-WWI, it’s a massive reminder to be chill. And let's not forget, its dramatic perch on Corcovado Mountain makes it look like it’s watching over the entire planet. Iconic much?</p>
         <img src = "https://i.pinimg.com/originals/82/06/de/8206de725ce41a8a7f4d7e041df73337.jpg" alt="Image of ChristTheRedeemer" width="500" height="600">
     </div>
 </body>
