--- a/GreatPyramidOfGiza.html
+++ b/GreatPyramidOfGiza.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>GreatPyramidOfGiza</h1>
-        <p>Information about ...</p>
+        <h2>Ranking Number 5 on the List: The Great Pyramid of Giza</h2>
+        <p>This pyramid? Straight-up timeless legend. It’s the last standing ancient wonder, flexing on the modern world with its precision and scale. Built as a pharaoh's crib for eternity, it’s got that god-tier energy. Even after 4,500 years, people are still trying to figure out how humans pulled this off. Giza’s aura is all about eternal vibes and impossible craftsmanship.</p>
         <img src = "https://tse1.mm.bing.net/th/id/OIP.HI2Ie9jPEDlH0l20e57aRwHaFH?rs=1&pid=ImgDetMain" alt="Image of the GreatPyramidOfGiza" width="500" height="600">
     </div>
 </body>
