--- a/GreatWallOfChina.html
+++ b/GreatWallOfChina.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>GreatWallOfChina</h1>
-        <p>Information about Chichen Itza...</p>
+        <h2>Ranking Number 6 on the List: The Great Wall of China</h2>
+        <p>This wall isn’t just long—it’s endlessly epic. Spanning thousands of miles, it was built to keep out invaders, but now it’s the ultimate glow-up destination for adventurers. With its rugged mountainside views and intense historical significance, it’s the definition of defensive chic. Walking it is basically signing up for a leg day, but the aura of perseverance and dominance makes it worth it.</p>
         <img src = "https://tse3.mm.bing.net/th/id/OIP.luBZDkgnN6ORmEAsscntTQHaE0?rs=1&pid=ImgDetMain" alt="Image of the GreatWallOfChina" width="500" height="600">
     </div>
 </body>
