--- a/MachuPicchu.html
+++ b/MachuPicchu.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>MachuPicchu</h1>
-        <p>Information about Chichen Itza...</p>
+        <h2>Ranking Number 4 on the List: Machu Picchu</h2>
+        <p>Machu Picchu is peak mysterious vibes (literally). Hidden in the Andes, it’s like the ultimate "secret hangout" of the Inca Empire. Nobody really knows why it was built, which makes it even cooler. The architecture is so flawless it’s like they hacked the laws of nature. Add the clouds rolling in over the ancient stone walls, and it’s a whole majestic and mysterious aesthetic.</p>
         <img src = "https://tse2.mm.bing.net/th/id/OIP.3DMmkE_GQozRPE-qJLQ2pwHaE7?rs=1&pid=ImgDetMain" alt="Image of MachuPicchu" width="500" height="600">
     </div>
 </body>
