--- a/Petra.html
+++ b/Petra.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>Petra</h1>
-        <p>Information about Chichen Itza...</p>
+        <h2>Ranking Number 8 on the List: Petra</h2>
+        <p>Petra is like a hidden treasure chest carved into rose-red cliffs. Known as the "Lost City," its vibe is mysterious, regal, and just a little eerie. Once a bustling trade hub, its aura now feels frozen in time—like it’s still guarding ancient secrets. Walking through the Siq and seeing the Treasury? Total cinematic reveal energy.</p>
         <img src = "https://tse1.mm.bing.net/th/id/OIP.wRetgRaVDqrCdzqZRmTIlwHaFj?rs=1&pid=ImgDetMain" alt="Image of Petra" width="500" height="600">
     </div>
 </body>
