--- a/TajMahai.html
+++ b/TajMahai.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>TajMahai</h1>
-        <p>Information about Chichen Itza...</p>
+        <h2>Ranking Number 2 on the List: The Taj Mahal</h2>
+        <p>Next up, the Taj Mahal is basically the CEO of romance. Built by Emperor Shah Jahan for his wife Mumtaz, it’s the ultimate "I love you" flex—like, a full-on marble palace dripping in priceless details. Its aura is all about devotion and heartbreak, plus the vibe of a literal jewel box glowing at sunrise? It’s unmatched. You can’t help but feel the drama and the drip of this masterpiece.</p>
         <img src = "https://th.bing.com/th/id/R.06136c32aea32a345938f576f4fb1cbe?rik=FupIJ5PSntuTJw&riu=http%3a%2f%2ftraveldigg.com%2fwp-content%2fuploads%2f2016%2f05%2fTaj-Mahal-Pictures.jpeg&ehk=TP8ijXAaja4Iysq29C2FlYkqqdprHFGnA5hbVUzevTg%3d&risl=&pid=ImgRaw&r=0" alt="Image of TajMahai" width="500" height="600">
     </div>
 </body>
