--- a/TheColosseum.html
+++ b/TheColosseum.html
@@ -20,7 +20,8 @@
     </div>
     <div class="main-content">
         <h1>TheColosseum</h1>
-        <p>Information about Chichen Itza...</p>
+        <h2>Ranking Number 3 on the List: The Colosseum</h2>
+        <p>The Colosseum is like the UFC arena of ancient Rome, but way cooler. This spot was the literal hype house of gladiators, chariot races, and epic battles. Its worn-down walls? Just battle scars from a time when the crowd went wild for lions vs. warriors. The vibe here screams chaotic energy and legendary stardom, giving you chills as you imagine the roars echoing through history.</p>
         <img src = "https://th.bing.com/th/id/R.22620bc7580ff093ce87facf219b34de?rik=zQyGlBQVlLnjmg&riu=http%3a%2f%2fwww.mostamazingwonders.com%2fwp-content%2fuploads%2f2014%2f06%2fRoman-Colosseum1.jpg&ehk=8g%2fH05DdjMq62Ryu2fzs1TT9C3fP4BkK5cRb%2b%2fE1k%2bo%3d&risl=&pid=ImgRaw&r=0" alt="Image of TheColosseum" width="500" height="600">
     </div>
 </body>
